# LeoProximityChat

./: .gitignore  README.md
bakkesmod-upload/: BakkesMod.props  CMakeLists.txt
bakkesmod-upload/src/: AudioEngine.h  LeoProximityChat.cpp  LeoProximityChat.h  NetworkManager.cpp  Protocol.h  SpatialAudio.cpp  ThreadSafeQueue.h  VoiceCodec.h  pch.h
plugin/: CMakeLists.txt  LeoProximityChat.sln  LeoProximityChat.vcxproj  vcpkg.json
plugin/settings/: leo_proximity_chat.set
plugin/src/: AudioEngine.cpp  AudioEngine.h  LeoProximityChat.cpp  LeoProximityChat.h  NetworkManager.h  Protocol.h  SpatialAudio.cpp  SpatialAudio.h  VoiceCodec.cpp  version.h
server/: .env  .env.example  LICENSE  README.md  package-lock.json  package.json  server.js
zip_staging/: README.txt
zip_staging/server/: start-server.bat
